<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Dots &amp; Boxes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="coming_soon">Coming soon&#8230;</string>
    <string name="cd_menu_button">Menu Button</string>

    <!-- Main menu -->
    <string name="menu_title">Dots &amp; Boxes</string>
    <string name="menu_option_play_local_player">With Friend</string>
    <string name="menu_option_play_local_cpu">With Robot</string>
    <string name="menu_option_play_network">Network</string>
    <string name="menu_option_history">History</string>

    <!-- Winner fragment -->
    <string name="winner">Winner</string>
    <string name="winner_points" formatted="false">%d : %d</string>

    <string name="you_win">You Win!</string>
    <string name="draw">Draw</string>
    <string name="you_lose">You lose.</string>

    <!-- SettingsActivity screen -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_music_title">Music</string>
    <string name="pref_music_summary">Volume for background music</string>

    <string name="pref_sound_title">  Sound</string>
    <string name="pref_sound_summary">Enable or disable touch sounds</string>

    <string name="pref_vibrate_title">Vibrate</string>
    <string name="pref_vibrate_summary">Enable or disable vibration</string>

    <string name="settings_title">Settings</string>
    <string name="pref_key_sound">pref_sound</string>
    <string name="pref_key_music">pref_music</string>
    <string name="pref_key_vibrate">pref_vibrate</string>

    <!-- Achievements -->
    <string name="achievement_started_up_unlocked">Started up</string>
    <string name="achievement_winner_winner_unlocked">Winner, winner!</string>
    <string name="achievement_fired_up_unlocked">Fired up</string>
    <string name="achievement_in_no_time_unlocked">In no time</string>
    <string name="achievement_flawless_unlocked">Flawless</string>

    <string name="remote_service_disconnected">Remove service disconnected.</string>
    <string name="remote_service_connected">Remote service connected</string>
    <string name="signin_failure">Failed to Sign-In</string>
    <string name="signin_other_error">Something went wrong</string>

    <!-- Network play -->
    <string name="sign_in_why">Sign in with Google Play Games</string>
    <string name="you_are_signed_in">You are signed in</string>
    <string name="sign_out">Sign Out</string>
    <string name="see_your_progress">See your progress</string>
    <string name="show_achievements">Show Achievements</string>
    <string name="show_leaderboards">Show leaderboards</string>
    <string name="achievements_not_available">Achievement not available</string>
    <string name="leaderboards_not_available">Leaderboards not available</string>
    <string name="achievement">New achievement</string>
    <string name="your_progress_will_be_uploaded">Your progress will be uploaded</string>
    <string name="signed_out_greeting">See you soon</string>
    <string name="network_menu_play_local">Play</string>

    <!-- Choose layout fragment -->
    <string name="choose_board_size">Choose Board Size</string>
    <string name="three_by_three">Small (quick)</string>
    <string name="four_by_four">Medium (standard)</string>
    <string name="five_by_five">Large (long)</string>

    <!-- Game screen -->
    <string name="player1name">Blue Player</string>
    <string name="player2name">Red Player</string>

    <string name="player1TurnName">Blue Player\'s</string>
    <string name="player2TurnName">Red Player\'s</string>
    <string name="turn_text">%s turn</string>

    <!-- About screen -->
    <string name="title_about">About</string>
    <string name="info_text_section_1">Dots And Boxes is a game in which you create boxes by placing lines that connect dots on a board.</string>
    <string name="info_text_section_2">The gameplay is simple. You select against who you want to play with - either a friend on the same device or a robot. After that you choose the size of the board and the game starts. Lines are placed by touching the board.</string>
    <string name="info_text_section_3">Created with care by <b>TouchAwesome</b></string>
    <string name="leave_feedback">Leave Feedback</string>

    <!-- Final screen -->
    <string name="wins">WINS</string>
    <string name="result">Result</string>
    <string name="title_activity_tutorial">How to play</string>
    <string name="win">WIN</string>

    <!-- Tutorial screen -->
    <string name="tutorial_part_1">Touch the board to place a line</string>
    <string name="tutorial_part_2">By connecting dots you fill boxes.\nThe player with the most boxes in the end wins.</string>
    <string name="complete_tutorial">Play</string>

    <!-- Feedback -->
    <string name="feedback_subject"><![CDATA[Feedback - Dots&Boxes Alpha]]></string>
    <string name="feedback_email">georgi@touchawesome.com</string>
    <string name="play">Play</string>

    <!-- Analytics Screen Names -->
    <string name="screen_name_choose_mode">Choose Mode</string>
    <string name="screen_name_choose_board_size">Choose Board Size</string>
    <string name="screen_name_game">Game</string>
    <string name="screen_name_results">Results</string>
    <string name="screen_name_settings">Settings</string>
    <string name="screen_name_achievements">Achievements</string>
    <string name="screen_name_about">About</string>

    <!-- Analytics Game Stats -->
    <string name="game_stats_category">Game Statistics</string>
    <string name="game_duration_label">Game Duration</string>
    <string name="game_mode_label">Play Mode</string>
    <string name="game_mode_template" formatted="false">Difficulty: %s, Mode: %s, Score: %d - %d</string>

    <!-- History screen -->
    <string name="title_history">History</string>
    <string name="lost">LOST</string>
    <string name="tie">TIE</string>
    <string name="versus">VS</string>

</resources>
