<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tutorial_screen_layout"
    tools:context="com.touchawesome.dotsandboxes.activities.TutorialActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/instructions_part_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/tutorial_part_1"
        android:textColor="@color/textColorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <FrameLayout
        android:id="@+id/tutorial_board_layout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructions_part_1" >

        <com.touchawesome.dotsandboxes.views.BoardView
            android:id="@+id/tutorial_board_hint"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="4dp"/>

        <com.touchawesome.dotsandboxes.views.BoardView
            android:id="@+id/tutorial_board"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="4dp"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/instructions_part_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:divider="@drawable/list_divider"
        android:dividerPadding="20dp"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_board_layout"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/tutorial_part_2"
            android:textColor="@color/textColorPrimaryDark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonCompleteTutorial"
            style="@style/MenuLayoutButton"
            android:layout_marginTop="16dp"
            android:text="@string/complete_tutorial" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
